# cwiczenia_inzynieria_grupa_1

./: .gitignore  Board.h  CMakeLists.txt  David_Czarnecki_refatoryzacja.txt  GRASP SOLID OK.txt  InputHandler.h  Lab_3_Inzynieria_Zad_2_CŁ.cpp  Lab_3_Zadanie_3_CŁ.cpp  Notatka do refactoring.txt  Warcaby-Copy.vpp  Warcaby13.vpp  Warcaby22.vpp  Warcaby_15_11.vpp  Warcaby_25_01.vpp  Wzorce projektowe 04.01.2023.docx  main.cpp  main_David_Czarnecki.cpp  main_oskar.cpp
GitHub_Inzynieria/: Warcaby.vpp.bak_000d
Google_tests/: CMakeLists.txt
Google_tests/core/: engine_tests.cpp
Kalkulator/: Kalkulator.cpp  funkcje.cpp  funkcje.h
Kalkulator druga wersja/: Kalkulator.cpp  Kalkulator.sln  Kalkulator.vcxproj  Kalkulator.vcxproj.filters  funkcje.cpp  funkcje.h
Kalkulator druga wersja/x64/Debug/: Kalkulator.ilk  Test.exp  Test.lib  vc143.idb
Kalkulator/x64/Debug/: Kalkulator.exe.recipe  Kalkulator.ilk  Kalkulator.vcxproj.FileListAbsolute.txt  Test.exp  Test.lib  vc143.idb
Kod Curyło Łukasz/Testowanie/: Testowanie.sln
Kod Curyło Łukasz/Testowanie/Testowanie/: Testowanie.cpp  Testowanie.h  Testowanie.vcxproj  Testowanie.vcxproj.filters
Oskar_to_do/: board.h  pawn.h  system.h  Źródło.cpp
Pizza i PC/: komputer.cpp  pawn_builder.cpp  pizza.cpp
core/: board.cpp  engine.cpp  engine.h  pawn.cpp  pawn.h  timer.cpp  timer.h
entities/: board.cpp  board.h  pawn.cpp  pawn.h  player.cpp  player.h
game/: board.h  engine.cpp  engine.h  main.cpp  player.h  timer.cpp
helpers/: calculate.cpp  calculate.h  draw_helper.cpp  draw_helper.h  formatter.cpp  formatter.h  load_res.cpp
pracaPraca/: Warcaby.vpp  Warcaby.vpp.bak_001f  Warcaby.vpp.bak_002d  Warcaby.vpp.bak_003d
warcaby/: CMakeLists.txt  main.cpp
warcaby/core/: engine.cpp  engine.h  timer.cpp  timer.h
warcaby/entities/: board.cpp  pawn.h
(+21 files in other folders)
